src/test/deca/syntax/valid/test_lower_gretaer.deca
{
    int a = 1;
    int b =0;
    while( a <=15){
        a = a +1 ;
        println(a);
        println(b);
    }
}