src/test/deca/syntax/invalid/created/affect-after-inst.deca
// declaration après une instruction
{
    int a = 1;
    a = a +1 ;
    int b = 3;
}